--- a/Web/static/css/microblog.css
+++ b/Web/static/css/microblog.css
@@ -37,7 +37,7 @@
 }
 
 .repost-icon {
-    background: url('/assets/packages/static/openvk/img/like.gif') no-repeat 1px -20px;
+    background: url('/assets/packages/static/openvk/img/published.gif') no-repeat 0px 0px;
     height: 12px;
     margin: 2px 3px 0px;
     width: 11px;
@@ -54,7 +54,7 @@
     height: 16px;
     width: 16px;
     overflow: auto;
-    background: url("/assets/packages/static/openvk/img/delete.svg") no-repeat -4px -4px;
+    background: url("/assets/packages/static/openvk/img/input_clear.gif") no-repeat 0px 0px;
     opacity: 0.1;
     transition-duration: 0.3s;
 }
