--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -109,13 +109,13 @@
 
                     {else}
                         <div class="link">
-                            <a href="/login">вход</a>
+                            <a href="/login">{_"header_login"}</a>
                         </div>
                         <div n:if="OPENVK_ROOT_CONF['openvk']['preferences']['registration']['enable']" class="link">
-                            <a href="/reg">регистрация</a>
+                            <a href="/reg">{_"header_registration"}</a>
                         </div>
                         <div class="link">
-                            <a href="/support">помощь</a>
+                            <a href="/support">{_"header_help"}</a>
                         </div>
                     {/ifset}
                 </div>
@@ -191,7 +191,7 @@
                         <input type="hidden" name="hash" value="{$csrfToken}" />
                         <input type="submit" value="{_'log_in'}" class="button" style="display: inline-block;" />
                         <a n:if="OPENVK_ROOT_CONF['openvk']['preferences']['registration']['enable']" href="/reg" class="button" style="display: inline-block;" >{_registration}</a><br><br>
-                        <a href="/restore.pl">Забыли пароль?</a>
+                        <a href="/restore.pl">{_"forgot_password"}</a>
                     </form>
                 {/ifset}
                 </div>
