--- a/Email/hello.eml.latte
+++ b/Email/hello.eml.latte
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width"/>
   <link rel="stylesheet" href="foundation.css" />
-  <title>Hello World!</title>
+  <title>Welcome to OpenVK!</title>
 </head>
 
 <body>
@@ -12,7 +12,7 @@
     <tr>
       <td class="float-center" align="center" valign="top">
         <center>
-          Блять
+          Добро пожаловать в OpenVK! Приятного времяприпровождения, надеюсь вам понравится.<br><br>Если появились вопросы, касаемые нашего сайта, пишите <a href="https://openvk.su/support?act=new">сюда</a>
         </center>
       </td>
     </tr>
