--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -268,6 +268,10 @@
         <script n:if="OPENVK_ROOT_CONF['openvk']['telemetry']['plausible']['enable']"
                 async defer data-domain="{php echo OPENVK_ROOT_CONF['openvk']['telemetry']['plausible']['domain']}"
                 src="{php echo OPENVK_ROOT_CONF['openvk']['telemetry']['plausible']['server']}js/plausible.js"></script>
+        
+        {ifset bodyScripts}
+            {include bodyScripts}
+        {/ifset}
     </body>
 </html>
 
