Rating: Added a golden progress bar (appears after 100%), redesigned rating bar

--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -1056,8 +1056,9 @@ textarea {
 .completeness-gauge {
     position: relative;
     width: 95%;
-    height: 20px;
+    height: 16px;
     background-color: #e6e6e6;
+	border-top: 1px solid #bbb;
 }
 
 .completeness-gauge > div {
@@ -1071,6 +1072,15 @@ textarea {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+}
+
+.completeness-gauge-gold {
+	background-color: #f6ebbb;
+	border-top: 1px solid #b9b597;
+}
+
+.completeness-gauge-gold > div {
+	background-color: #e1d7a2;
 }
 
 .toTop {
