Wall: New pin icon instead of X icon on Pin/Unpin action

--- a/Web/static/css/microblog.css
+++ b/Web/static/css/microblog.css
@@ -62,3 +62,18 @@
 .post-author .delete:hover {
     opacity: 0.4;
 }
+
+.post-author .pin {
+    float: right;
+    display: inline-block;
+    height: 16px;
+    width: 16px;
+    overflow: auto;
+    background: url("/assets/packages/static/openvk/img/pin.png") no-repeat 0px 0px;
+    opacity: 0.1;
+    transition-duration: 0.3s;
+}
+
+.post-author .pin:hover {
+    opacity: 0.4;
+}
