--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -538,6 +538,21 @@ h4 {
     color: #bcbcbc;
 }
 
+.post:target {
+	animation-duration: 5s;
+	animation-name: post-target;
+}
+
+@keyframes post-target {
+	from {
+		background-color: rgba(208, 208, 208, 1);
+	}
+
+	to {
+		background-color: rgba(208, 208, 208, 0);
+	}
+}
+
 .small-textarea {
     height: 24px;
 }
