Global: Mail.ru -> VK Group
The time has come (suddenly).

--- a/Web/static/css/microblog.css
+++ b/Web/static/css/microblog.css
@@ -1,5 +1,5 @@
 /* VK's Microblog CSS */
-/* Design belongs to Pavel Durov & mail.ru */
+/* Design belongs to Pavel Durov & VK Group */
 
 .post {
     padding: 5px 0 5px 0;
