Wall: Add z-index to attachment menu

--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -1384,6 +1384,7 @@ body.scrolled .toTop:hover {
     margin-top: 20px;
     border: 1px solid darkgrey;
     background-color: white;
+    z-index: 32;
 }
 
 #wallAttachmentMenu > a {
