--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -1446,3 +1446,7 @@ body.scrolled .toTop:hover {
     background-color: #f3ddbd;
     color: #58462a;
 }
+
+.knowledgeBaseArticle {
+	margin-top: -11px; /* this is very stupid fix but nah */
+}
