Correctly display long names when displaying only creator without comment

--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -1483,7 +1483,7 @@ body.scrolled .toTop:hover {
     width: 134px;
 }
 
-.avatar-list-item .info-without-subtitle-centered {
+.avatar-list-item .info-centered {
     padding-top: 8px;
 }
 
