Improvements related to group admins (#278)
Changes:
1. Add the ability to display only administrators on the page with a list of subscribers
2. Add the ability to hide the fact that the subscriber is an administrator
3. Fix display of large text in the block with the list of administrators
4. Fix display of the number of administrators

--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -1480,9 +1480,10 @@ body.scrolled .toTop:hover {
 .avatar-list-item .info {
     float: left;
     padding-left: 8px;
+    width: 134px;
 }
 
-.avatar-list-item .info-without-subtitle-centered {
+.avatar-list-item .info-centered {
     padding-top: 8px;
 }
 
