Users: Add a popup to change the status Now, when you click on the status, a popup window opens in which you can do this (just like in the original VK and OpenVK Classic). So far, changing the status requires a page reload. Closes #227

--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -340,6 +340,29 @@ table {
     overflow: hidden;
 }
 
+.page_status_edit_button {
+    cursor: pointer;
+}
+
+.page_status_edit_button:hover {
+    text-decoration: underline;
+}
+
+.page_status_popup {
+    position: absolute;
+    border: 1px solid #CCC;
+    background-color: #f7f7f7;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);;
+    padding: 10px;
+    float: right;
+    margin-top: 6px;
+    margin-left: -6px;
+}
+
+.page_status_popup form {
+    margin: 0;
+}
+
 .button {
     border-radius: 2px;
     border: #595959;
