--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -1525,3 +1525,24 @@ body.scrolled .toTop:hover {
     color: rgb(128, 128, 128);
     font-size: 10px;
 }
+
+.paginator {
+    float: right;
+    margin-top: -1px;
+}
+
+.paginator a {
+    border-top: 3px solid transparent;
+    display: inline-block;
+    padding: 4px 5px;
+}
+
+.paginator a:hover {
+    border-top: 3px solid rgb(170, 170, 170);
+    background-color: rgb(230, 230, 230);
+}
+
+.paginator a.active {
+    border-top: 3px solid rgb(130, 130, 130);
+    font-weight: bold;
+}
