Themepacks: Adapt the layout to support xmas.css stylesheet
and added some info about why the theme was been skipped

--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -30,7 +30,7 @@
                 
                 <link rel="stylesheet" href="/themepack/{$theme->getId()}/{$theme->getVersion()}/stylesheet/styles.css" />
                 {if $isXmas}
-                    <link rel="stylesheet" href="/themepack/{$theme->getId()}/{$theme->getVersion()}/stylesheet/xmas.css" />
+                    <link rel="stylesheet" href="/themepack/{$theme->getId()}/{$theme->getVersion()}/resource/xmas.css" />
                 {/if}
             {else}
                 {css "css/style.css"}
