Global: Fix paginator display in lists It's probably a crutch, but oh well. Just continued an existing crutch

--- a/Web/Presenters/templates/@listView.xml
+++ b/Web/Presenters/templates/@listView.xml
@@ -36,10 +36,11 @@
                 
                 <div style="padding: 8px;">
                     {include "components/paginator.xml", conf => (object) [
-                        "page"    => $page,
-                        "count"   => $count,
-                        "amount"  => sizeof($data),
-                        "perPage" => $perPage ?? OPENVK_DEFAULT_PER_PAGE,
+                        "page"     => $page,
+                        "count"    => $count,
+                        "amount"   => sizeof($data),
+                        "perPage"  => $perPage ?? OPENVK_DEFAULT_PER_PAGE,
+                        "atBottom" => true,
                     ]}
                 </div>
             {else}
